<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />

        <variable
            name="stProgress"
            type="Boolean" />

        <variable
            name="viewModel"
            type="id.bluebird.vsm.feature.airport_fleet.main.FleetNonApshViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            indeterminateTintConfig="@{null}"
            android:visibility="@{stProgress ? View.VISIBLE : View.GONE}"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/counter_view_pages"
            android:visibility="@{stProgress ? View.GONE : View.VISIBLE}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <include
                layout="@layout/counter_bar_non_apsh"
                app:fleetNonApshViewModel="@{viewModel}" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/search_bar_pages"
            android:visibility="@{stProgress ? View.GONE : View.VISIBLE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counter_view_pages">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_search_car_stock"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@{viewModel.carSearch.length() &gt; viewModel.ENABLE_VALUE_GREATER ? @drawable/bg_search_disable: @drawable/bg_search_car_all_rounded}"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_search_fleet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/insert_car_number"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions|textCapCharacters"
                        android:lines="1"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="16dp"
                        android:focusable="false"
                        android:paddingBottom="10dp"
                        android:onClick="@{() -> viewModel.intentToAddFleetPage()}"
                        android:textAllCaps="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/imv_scanner_text"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imv_scanner_text"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{() -> viewModel.takePicture()}"
                        android:src="@drawable/ic_barcode_scanner"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/edt_search_fleet"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/field_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="3"
                android:background="@{viewModel.fleetLiveData.size() &gt; viewModel.ENABLE_VALUE_GREATER ? @drawable/bg_editext_login_enable: @drawable/bg_button_login_disable}"
                android:gravity="center_vertical"
                android:hint="@string/search_fleet"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions|textCapCharacters"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:text="@={viewModel.searchFleetInfo}"
                android:textAllCaps="true" />
        </LinearLayout>

        <View
            android:id="@+id/divider_pages"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey_line"
            android:visibility="@{stProgress ? View.GONE : View.VISIBLE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar_pages"/>

        <LinearLayout
            android:id="@+id/stock_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="24dp"
            android:paddingTop="12dp"
            android:visibility="@{stProgress ? View.GONE : View.VISIBLE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_pages">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/leftTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/stock_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/val_counter_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:text="@{String.valueOf(viewModel.counterLiveData.stock)}" />

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{stProgress ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/action_bottom_pages"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_pages">

        <LinearLayout
            android:id="@+id/ll_item_list_perimeter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:visibility="@{stProgress ? View.GONE : View.VISIBLE}"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/status_condition_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:src="@drawable/bg_queue_not_found" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_status_empty"
                    statusTitle="@{viewModel.emptyFleetList}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center_horizontal"
                    android:lineHeight="30sp"
                    android:textColor="@color/primary_color"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/message_status_empty"
                    statusMessage="@{viewModel.emptyFleetList}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="center_horizontal"
                    android:lineHeight="24sp"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    buttonBackgroundFleet="@{null}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:onClick="@{() -> viewModel.dialogRequest()}"
                    android:text="@string/request_armada"
                    android:textColor="@android:color/white"
                    android:visibility="@{viewModel.isPerimeter() ? View.GONE: View.VISIBLE, default=gone}" />

            </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fleet_list_rcv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:fastScrollEnabled="true"
                    app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
                    app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
                    app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
                    app:fastScrollVerticalTrackDrawable="@drawable/line_drawable" />

<!--            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

        </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/action_bottom_pages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="@{viewModel.selectFleetCounter &gt; viewModel.ENABLE_VALUE_GREATER? View.VISIBLE :View.GONE, default=gone}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@{String.valueOf(viewModel.selectFleetCounter)}"
                        android:textColor="@color/gray_tile"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/selected2"
                        android:textColor="@color/gray_tile"
                        android:textSize="16sp" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    buttonBackgroundFleetCancel="@{null}"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:onClick="@{() -> viewModel.dispatchMultipleFleet()}"
                    app:fleetStatus="@{viewModel.statusFleetIsArrived}"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>